style file link for the :ribbon: dur

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         
         <script type='text/javascript' src="jquery-1.11.0.min.js"></script>
         <script type='text/javascript' src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-	
+	        
+	        <link rel="stylesheet" type="text/css" href="ribbon.css" />
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<script type="text/javascript" src="index.js"></script>
 	
