--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 	       
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<script type="text/javascript" src="index.js"></script>
-	
+	<!-- optional themes -->
+        <link rel="stylesheet" type="text/css" href=" http://bootswatch.com/yeti/bootstrap.min.css"/>
+
         <link rel="shortcut icon" href="favicon.ico">
     
     </head>
